# lightning-hydra-template

./: Makefile  eval.py  pyproject.toml  train.py
configs/paths/: default.yaml
src/datamodules/: mnist_datamodule.py
src/models/: mnist_module.py
tests/: conftest.py  test_eval.py  test_train.py
