[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "simmer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=1.10.0"
torchvision = ">=0.11.0"
pytorch-lightning = "1.7.1"
torchmetrics = "0.10.0"
hydra-core = "1.2.0"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
wandb = ">=0.13.4"
rich = ">=12.6.0"
pytest = ">=7.1.3"

[tool.poetry.dev-dependencies]
ipdb = ">=0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
